Generate from server spec 1.79.0
Server spec 1.79.0 changes the path from /budget[s] to /plan[s] and also
a few of the member names in the response from 'budget[s]' to 'plan[s]' and 'default_budget' to 'default_plan'.

Backwards compatibility is maintained for the member names.  The
member names are only changed if /budgets is used in URL rather than
/plans.
